fix error with headings on mobile

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -37,6 +37,11 @@ h6 {
     font-weight: 700;
 }
 
+@media(max-width: 768px) {
+  h1 {
+    font-size: 2vw;
+  }
+}
 
 .timetable table, th, td {
   border: 1px solid black;
